--- a/test.html
+++ b/test.html
@@ -8,5 +8,11 @@
 <body>
     <h1>hello world</h1>
     <h2>learninng git</h2>
+    <table>
+        <th></th>
+        <th></th>
+        <tr></tr>
+        <tr></tr>
+    </table>
 </body>
 </html>
