--- a/test.html
+++ b/test.html
@@ -9,7 +9,18 @@
     <h1>hello world</h1>
     <h2>learninng git</h2>
     <table>
-    
+        <thead>
+            <tr>
+                <th>username</th>
+                <th>number</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>haider</td>
+                <td>95228753</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
